[metadata]
name = iso2web
version = 0.1.0
license = MIT
author = Proofpoint
maintainer = Ludvik Jerabek
url = https://github.com/pfptcommunity/iso2web
description = Tool to Send Proofpoint Isolation Data to a Webhook

[options]
zip_safe = False
include_package_data = False
packages =
    iso2web
python_requires = >= 3.9
install_requires =
    python-dateutil~=2.8.2
    requests~=2.28.2
    setuptools~=65.5.1
    cryptography~=40.0.2

[options.entry_points]
console_scripts =
    iso2web = iso2web.iso2web:main